--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
     <div class="container">
       <div class="card text-center">
-        <img src="../profile/image/d_07.jpg" alt="Jean-Daniel DULOIR" class="image-circle">
+        <img src="../profile/image/d_07.jpg" alt="Jean-Daniel DULOIR" id="img-profile" class="img-circle">
         <h1>DULOIR Jean-Daniel dit Bruce Wayne</h1>
         <h2>Batman / Dealer de code</h2>
 
         <p>
           Me définir en quelques mots:
-          <strong>S'il n'y a pas de solutions, il n'y a pas de problèmes</strong>
+          <strong>S'il n'y a pas de solutions, il n'y a pas de problèmes</strong><br>
           Batman is always on his preptime
 
         </p>
@@ -27,22 +27,16 @@
       <div class="card text-center">
       <h2>Poëme favoris: Chanson d'automne</h2>
 
-      <ul>
-        <li>
+      <ul class="list-style">
+        <li >
           Les sanglots longs Des violons De l'automne
         </li>
-      </ul>
-      <ul>
         <li>
           Blessent mon coeur D'une langueur Monotone.
         </li>
-      </ul>
-      <ul>
         <li>
           Tout suffocant Et blême, quand Sonne l'heure, Je me souviens Des jours anciens Et je pleure
         </li>
-      </ul>
-      <ul>
         <li>
           Et je m'en vais Au vent mauvais Qui m'emporte Deçà, delà, Pareil à la Feuille morte.
         </li>
